# bio_cli

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
agent/: graph.py  nodes.py  state.py
core/: config.py  llm.py  rag.py
data/samples/: README.md
docs/: README.md
tests/: test_config.py  test_rag.py  test_state.py
