[project]
name = "bio-cli"
version = "0.1.0"
description = "Nutrition and exercise physiology CLI agent with LangGraph, RAG, and OpenAI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "faiss-cpu>=1.8.0",
  "langchain>=0.3.0",
  "langchain-community>=0.3.0",
  "langchain-openai>=0.2.0",
  "langgraph>=0.2.0",
  "pydantic-settings>=2.4.0",
  "pypdf>=5.0.0",
  "python-dotenv>=1.0.1",
  "typer>=0.12.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[project.scripts]
bio = "main:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["agent", "core"]
